Designed the Products list
* designed the RecyclerView part which displays the products.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidProductsScreen</string>
+    <string name="review_label">Review</string>
 </resources>
