--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndroidProductsScreen</string>
     <string name="review_label">Review</string>
+    <string name="formatted_price">EGP %.2f</string>
+    <string name="reviews_average">(%.1f)</string>
 </resources>
